# ChangeLog for media-libs/jpeg
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/jpeg/ChangeLog,v 1.61 2007/07/11 20:33:15 uberlord Exp $

  11 Jul 2007; Roy Marples <uberlord@gentoo.org> jpeg-6b-r8.ebuild:
  Keyworded ~sparc-fbsd.

  24 Apr 2007; Raúl Porcel <armin76@gentoo.org> jpeg-6b-r8.ebuild:
  Revert back to unstable, doesn't compile on hardened, thanks to gustavoz for
  reporting

  24 Apr 2007; Raúl Porcel <armin76@gentoo.org> jpeg-6b-r8.ebuild:
  ia64 + x86 stable

  15 Feb 2007; Fabian Groffen <grobian@gentoo.org> jpeg-6b-r7.ebuild,
  jpeg-6b-r8.ebuild:
  Dropped ppc-macos keyword, see you in prefix

*jpeg-6b-r8 (09 Feb 2007)

  09 Feb 2007; Mike Frysinger <vapier@gentoo.org> +jpeg-6b-r8.ebuild:
  Cleanup tempfile handling #165940 by Andrew Aylett.

  04 Sep 2006; Joshua Kinard <kumba@gentoo.org> jpeg-6b-r7.ebuild:
  Marked stable on mips.

  18 Jun 2006; Bryan Østergaard <kloeri@gentoo.org> jpeg-6b-r7.ebuild:
  Stable on ia64, bug 130889.

  18 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> jpeg-6b-r7.ebuild:
  Re-add ~x86-fbsd keyword now.

  16 Jun 2006; Fabian Groffen <grobian@gentoo.org> jpeg-6b-r7.ebuild:
  Updating the patchset to include Darwin/BSD patch, marked ppc-macos stable
  (bug #130889)

  03 Jun 2006; Rene Nussbaumer <killerfox@gentoo.org> jpeg-6b-r7.ebuild:
  Stable on hppa. See bug #130889.

  02 Jun 2006; Mark Loeser <halcy0n@gentoo.org> jpeg-6b-r7.ebuild:
  Stable on x86; bug #130889

  01 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org> jpeg-6b-r7.ebuild:
  ppc stable, bug #130889

  31 May 2006; Thomas Cort <tcort@gentoo.org> jpeg-6b-r7.ebuild:
  Stable on amd64 wrt security Bug #130889.

  31 May 2006; Markus Rothe <corsair@gentoo.org> jpeg-6b-r7.ebuild:
  Stable on ppc64; bug #130889

  31 May 2006; Gustavo Zacarias <gustavoz@gentoo.org> jpeg-6b-r7.ebuild:
  Stable on sparc wrt security #130889

  31 May 2006; Thomas Cort <tcort@gentoo.org> jpeg-6b-r7.ebuild: