@@ -2,6 +2,6 @@ DIST jpeg-6b-patches-1.4.tar.bz2 22476 RMD160 b8c5cc7383b07028c7b973305437c89d5b
 DIST jpeg-6b-patches-1.6.tar.bz2 22573 RMD160 21290e71c116d8e543737ffd5e26b96f34e30f93 SHA1 b66629ad0380a318442be5b5b4ba945bf98035ff SHA256 23a07581f336a1e8c33f0efdb4b3ef728fe278459811b3b89258f8525dbbbcca
 DIST jpegsrc.v6b.tar.gz 613261 RMD160 18892206014fbb8cae2a44e281f4ed53feaf7882 SHA1 7079f0d6c42fad0cfba382cf6ad322add1ace8f9 SHA256 75c3ec241e9996504fe02a9ed4d12f16b74ade713972f3db9e65ce95cd27e35d
 EBUILD jpeg-6b-r7.ebuild 1264 RMD160 a1db9bd9fdea62bf8c9aa645316f052f6aa5df35 SHA1 c14ac549351852605eca0d25f73710999f1477b3 SHA256 545713870077a37c635aaac437529fd38853eaece1753d9860838c9afab61feb
-EBUILD jpeg-6b-r8.ebuild 1304 RMD160 88040d70077bfc5fd7f8c98a35d7cd75e09532a0 SHA1 47d71dcab15356956387559048216d9ae954dac5 SHA256 4a49090ae1752f7e1bf3d77a6f23d9f7e3181c01ec484760add59a749a643ef3
-MISC ChangeLog 7874 RMD160 a0839d8e762ac43ff6247e40404c0f50ee5d3fb4 SHA1 8545feb0138a07804deb713af1a7c603e20cd926 SHA256 ccbe0f62e874f6a597d0c59759446c53599cc3140d3deffd0531b4e62bcb0b1f
+EBUILD jpeg-6b-r8.ebuild 1298 RMD160 f3e57c46d720dfd0aa3832d358894f94cdffa0a3 SHA1 03162aa1af85b6ba8f2108c41ebd4e3db3cd1935 SHA256 782de28f0779727ab714454c2a93d2152890b06f63410193842cda3068a9292b
+MISC ChangeLog 7969 RMD160 4ace4d80c49b59c30216fa801ad1b23f9e0bc4d8 SHA1 41be1938bec8d144b7213c0a9619a3365f119457 SHA256 485356af4a59b10ad21e7c95e1ff81c27509304906cf6a187ee059659955d07b
 MISC metadata.xml 224 RMD160 3a7dcbadaed2b7ed12e11152fe1fe2de0193fc29 SHA1 fa5078079869e963f3f51f80124cecf8ea6c1b67 SHA256 806818bba7ae36d62f16c1fe548a1eb2a360caf2d984aa8f47bba7b91ff73434
